@@ -1,5 +1,8 @@
 {{$NEXT}}
 
+    * Adding attachment formatting for tickets, which is handy for use with
+      SlackChat.
+
 0.160490  2016-02-18 10:31:55-06:00 America/Chicago
 
     * Initial release.
